# currensee

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  pyproject.toml  readme_v2.md
currensee/: README.md  run_agent.py  run_client.py  run_service.py
currensee/agents/: README.md  Untitled.ipynb  __init__.py  agent_utils.py  chatbot.py  complete_graph.py  crew.py  financial_agent.py  financial_graph.py  lc_complete_graph.py  main.py  supervisor_agent.py  supervisor_graph.py
currensee/agents/config/: agents.yaml  tasks.yaml
currensee/agents/knowledge/: user_preference.txt
currensee/agents/nodes/: nodes.py  supervisor.py
currensee/agents/tools/: __init__.py  base.py  crm_tools.py  custom_rag_tools.py  custom_tool.py  custom_tool_fin_news.py  database_tools.py  finance_tools.py  financial_datasets_tool.py  format_tool.py  graph_tools.py  o365_tools.py  outlook_tools.py  outlook_tools_lc.py  sec_tool.py
currensee/client/: __init__.py  client.py
currensee/core/: __init__.py  secrets.py  settings.py
currensee/memory/: __init_.py  postgres.py  sqlite.py
currensee/query_engines/: .env.swp  README.md  prompts.py  workflow_descriptions.py
currensee/query_engines/sql_query_engine/: query_engine.py  query_engine_LC.py  workflow.py
currensee/schema/: schema.py
currensee/service/: _init__.py  service.py  utils.py
currensee/ui/: README.md  package-lock.json  package.json  webpack.config.js
currensee/utils/: db_utils.py  get_logo_utils.py  output_utils.py  str_utils.py
currensee/workflows/: README.md  workflow_descriptions.py
currensee/workflows/agent_workflow/: workflow.py
currensee/workflows/sql_workflow/: utils.py
data/: accounts.csv  contacts.csv  employees.csv  opportunities.csv
data/crm/: accounts.csv  contacts.csv  employees.csv  janes_contacts.csv  opportunities.csv  portfolio.csv
data/outlook/: bankwell_synthetic_emails.csv  financial_consultant_meetings_2025.csv
dev/: test_secrets_manager.ipynb
docker/: Dockerfile.service
docs/: index.html
notebooks/1.0-data_loading/: 1.0-sample_connect_cloud_sql.ipynb  2.0-load-crm-to-cloud.ipynb  2.0-load_crm_to_cloud.ipynb  3.0-load-outlook-to-cloud.ipynb  3.0-load_outlook_to_cloud.ipynb  4.0-load-preference-data.ipynb  4.0_load_preference_data.ipynb  5.0-load-more-meetings.ipynb  6.0-produce-new-user-data.ipynb  7.0-preference-data-testing.ipynb  8.0-update-meeting-dates.ipynb  preference_data_testing_nb.ipynb
notebooks/2.0-agent_development/: prototype_demo_nb.ipynb
notebooks/2.0-agent_development/0.0-capstone_one/: 2.0-gf-test-tool.ipynb  3.0-ap-complete-graph-testing.ipynb  3.0-lc-complete-graph-testing-traceback.ipynb  3.0-lc-complete-graph-testing.ipynb  3.0-so-complete-graph-testing.ipynb  3.0-so-complete-graph-testing_2.ipynb  3.0-so-complete-graph-testing_3.ipynb  3.0-xf-complete-graph-testing.ipynb  4.0-so-fin_news_tools.ipynb
notebooks/2.0-agent_development/1.0-demo_notebooks/: Init_state_selection.ipynb  XF_dynamic_demo_nb.ipynb  dynamic_demo_nb.ipynb  input_guardrails.ipynb  meeting categorization_testing.ipynb  meeting_categorization_testing.ipynb  prototype_demo_nb.ipynb  xf_dynamic_demo_nb.ipynb  xf_output_tool_test.ipynb
notebooks/3.0-agent_development/: 2.0-gf-test-tool.ipynb  2.0-lc-test-email_questions.ipynb  3.0-ap-complete-graph-testing.ipynb  3.0-lc-complete-graph-testing-traceback.ipynb  3.0-lc-complete-graph-testing.ipynb  3.0-so-complete-graph-testing.ipynb  3.0-so-complete-graph-testing_2.ipynb  3.0-so-complete-graph-testing_3.ipynb  3.0-xf-complete-graph-testing.ipynb  prototype_demo_nb.ipynb  test.ipynb
notebooks/3.0-agent_development/archive/: 1.0-gf-supervisor.ipynb
notebooks/UI_testing/: demo_reports.ipynb  report_ui_test.ipynb  ui_data_select_xf.ipynb
notebooks/agent_development/: .env.swp  2.0-gf-test-tool.ipynb  3.0-gf-complete-graph-testing.ipynb  3.0-lc-complete-graph-testing.ipynb  fin_news_tools_backup.ipynb  fin_news_tools_new.ipynb  fin_news_tools_old.ipynb
notebooks/data_loading/: README.md  align_janes_accounts.ipynb  append_emails_hasboro.xlsx  append_more_emails.ipynb  cloud_sql.ipynb  connect_cloud_sql.ipynb  equity_fund_example.xlsx  load_crm_outlook_to_cloud.ipynb  load_crm_to_cloud.ipynb  load_outlook_to_cloud.ipynb  market_data.ipynb  other_clients_align.xlsx
notebooks/query_engines/: 01.0-LC-query-engine-testing.ipynb  01.0-gf-query-engine-example.ipynb  01.0-xf-query-engine-testing.ipynb
notebooks/workflows/: 01.0-LC-workflow-testing.ipynb  01.0-gf-workflow-example.ipynb  01.0-xf-workflow-testing.ipynb
src/currensee/: README.md
src/currensee/agents/: README.md  agent_utils.py  (+3 more)
src/ui/: README.md  package-lock.json
tests/: conftest.py
tests/client/: conftest.py  test_client.py
tests/core/: test_llm.py  test_settings.py
tests/service/: conftest.py  test_auth.py  test_service.py  test_service_e2e.py  test_utils.py
ui/: client_holding.html  index.html  notification.html  outlook.html
ui/templates/: outlook.html  outlook_RH.html  report.html  report_staged.html
utils/: output_utils.py
utils/data_generation/: crm_datagen.py  outlook_csv_to_eml.py  outlook_event_csv_to_ics.py  outlook_event_datagen.py
(+65 files in other folders)
