[project]
name = "currensee"
version = "0.1.0"
description = "Conversational AI interface to aid in client p-facing work using data from Microsoft 365, google products, earnings reports, and more."
authors = [
    {name = "Lily Campbell",email = "lilycampbell@uchicago.edu"},
    {name = "Xiaojing Fang", email = "xjfang@uchicago.edu"},
    {name = "Gretchen Forbush", email = "forbug@uchicago.edu"},
    {name = "Stepan Ochodek", email = "sochodek@uchicago.edu"},
    {name = "Alen Pavlovic", email = "apavlovic@uchicago.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faker (>=37.1.0,<38.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "o365 (>=2.1.2,<3.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-google-genai (>=2.1.3,<3.0.0)",
    "langgraph-supervisor (>=0.0.17,<0.0.18)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]

